<resources>
    <string name="app_name">YandexMusicCasher</string>
    <string name="wrong_intent">Неправильное действие</string>
    <string name="parse_error">Ошибка получения сведений о треке</string>
    <string name="download_error">Ошибка загрузки: Возможно не хватает памяти или интернета</string>
    <string name="yandex_verify">Яндекс просит подтвердить, что вы не робот) Введите капчу пока не появится куча текста и нажмите Продолжить.</string>
    <string name="no_music_app">Нет приложения для проигрывания музыки</string>
    <string name="play_music_error">Невозможно проиграть музыку</string>
    <string name="enter">Продолжить</string>
    <string name="info">Как сохранять?</string>
    <string name="update">Обновить</string>
    <string name="free">Бесплатно</string>
    <string name="forever">Навсегда</string>
    <string name="update_url">http://mobindustry.ru/musiccash/app.apk</string>
    <string name="version_url">http://mobindustry.ru/musiccash/version</string>
    <string name="no_updates">Обновление не требуется</string>
    <string name="updating">Загрузка обновлений</string>
    <string name="update_title">Обновление Yandex Music Casher</string>
    <string name="update_error">Ошибка обновления</string>
    <string name="get_permission_msg">Необходимо разрешить приложению сохранять музыку!</string>
    <string name="permission_denied">Без этого разрешения мы не сможем сохранять музыку!</string>
    <string name="ok">OK</string>
    <string name="Cancel">Закрыть</string>

    <string name="guide">Гайд</string>
    <string name="OK">ОК</string>
    <string name="guide_1">Заходите в приложение Яндекс Музыка и ищите кнопку "Поделиться" рядом с аудиозаписью, которую хотите сохранить и проиграть</string>
    <string name="guide_2">Нажимаете на нее и выбираете в списке приложение YandexMusicCasher.</string>
    <string name="guide_3">Загружаемый файл появится в с панели уведомлений. Музыка сохраняется в папку /storage/emulated/0/music_cash/ </string>
    <string name="guide_4">После загрузки будет предложено выбрать приложение аудио-плеер</string>
    <string name="guide_5">Возможно  &#822;к&#822; &#822;в&#822;а&#822;м&#822; &#822;п&#822;о&#822;с&#822;т&#822;у&#822;ч&#822;а&#822;т&#822;с&#822;я&#822; &#822;л&#822;ю&#822;д&#822;и&#822; &#822;в&#822; &#822;ш&#822;т&#822;а&#822;т&#822;с&#822;к&#822;о&#822;м&#822; Яндекс попросит вас ввести капчу. Вводим, нажимаем кнопку Отправить в окне (НЕ кнопку ПРОДОЛЖИТЬ), потом, когда появится многабукв жмем Продолжить.</string>
    <string name="choose_path">Выберите папку для сохранения музыки</string>
    <string name="internet_error">Ошибка интернет соединения</string>
    <string name="indef_path">Путь сохранения не определен</string>
    <string name="copying_error">Ошибка копирования музыки в заданный путь</string>
    <string name="cash_error">Ошибка удаления кеша музыки</string>
    <string name="error_writing_track_info">Ошибка записи информации о треке</string>
    <string name="error_parsing_track_info">Ошибка распознавания информации о треке</string>
    <string name="error_setting_music_info">Ошибка установки информацции о треке</string>
    <string name="download">Скачать</string>
    <string name="download_play">Скачать и играть</string>
    <string name="play">Играть</string>
</resources>
