<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_1"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide_one_mini"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide_two_mini"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_3"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide_three_mini"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_4"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide_four_mini"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_5"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide_five_mini"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </LinearLayout>

</ScrollView>